--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,11 @@ add_executable(mpogen src/mpogen.cpp src/operators.cpp)
 add_executable(dmrg src/dmrg.cpp src/myutil.cpp)
 add_executable(measure1 src/measure1.cpp src/myutil.cpp src/operators.cpp)
 add_executable(measuresf src/measure_spin_structure_factor.cpp src/myutil.cpp src/operators.cpp)
+
+add_executable(fixenv src/fix_env.cpp src/myutil.cpp)
+add_executable(fixmps src/fix_mps.cpp src/myutil.cpp)
+add_executable(continue src/continue.cpp src/myutil.cpp)
+
 add_executable(xtrg src/xtrg.cpp src/myutil.cpp)
 
 add_executable(test1 XTRG_common/xy_model_test.cpp)
