--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,14 @@ add_executable(xtrg src/xtrg.cpp src/myutil.cpp)
 add_executable(test1 XTRG_common/xy_model_test.cpp)
 add_executable(test2 XTRG_common/transverse_ising_test.cpp)
 
-add_executable(testising MonteCarlo_src/ising_test.cpp)
-add_executable(testxy MonteCarlo_src/xy_test.cpp)
+add_executable(ising MonteCarlo_src/ising.cpp)
+add_executable(ising_exchange MonteCarlo_src/ising_exchange.cpp)
+add_executable(xy MonteCarlo_src/xymodel.cpp)
 add_executable(heisenberg MonteCarlo_src/classical_heisenberg.cpp)
-add_executable(testani1 MonteCarlo_src/anisotropy_test1.cpp)
+add_executable(statistic MonteCarlo_src/statistic.cpp)
+add_executable(ising_statistic MonteCarlo_src/ising_statistic.cpp)
+#add_executable(testani1 MonteCarlo_src/anisotropy_test1.cpp)
+add_executable(test MonteCarlo_src/test.cpp)
+add_executable(heisenberg_exchange MonteCarlo_src/heisenberg_exchange.cpp)
+
+add_executable(clock ClockModel/clock.cpp)
