The paper is published.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ add_executable(mpogen src/mpogen.cpp src/operators.cpp)
 add_executable(dmrg src/dmrg.cpp src/myutil.cpp)
 add_executable(measure1 src/measure1.cpp src/myutil.cpp src/operators.cpp)
 add_executable(measuresf src/measure_spin_structure_factor.cpp src/myutil.cpp src/operators.cpp)
+add_executable(contract_demo src/contract_demo.cpp)
 
 add_executable(fixenv src/fix_env.cpp src/myutil.cpp)
 add_executable(fixmps src/fix_mps.cpp src/myutil.cpp)
@@ -146,5 +147,5 @@ add_executable(ising_statistic MonteCarlo_src/ising_statistic.cpp)
 #add_executable(testani1 MonteCarlo_src/anisotropy_test1.cpp)
 add_executable(test MonteCarlo_src/test.cpp)
 add_executable(heisenberg_exchange MonteCarlo_src/heisenberg_exchange.cpp)
-
+add_executable(statistic_hei_ex MonteCarlo_src/statistic_heisenberg_exMC.cpp)
 add_executable(clock ClockModel/clock.cpp)
