--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 *.app
 
 # Cmake build
+debug/
 build/
 cmake-build-debug/
 release/
@@ -44,6 +45,9 @@ data/
 data2/
 data3/
 run/
+
+#Mac OSX
+.DS_Store
 
 *.DS_Store
 *.mat
